# hud

./: CMakeLists.txt  README.md  run.sh  setup.sh
dependencies/clay/: .clangd  CMakeLists.txt  clay_renderer_SDL3.c  clay_renderer_SDL3.h
src/: .clangd  main.cpp
